[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nil_lib"
version = "2.2"
description = "Python libary for network devices and various commands"
readme = "README.md"
authors = [{ name = "Katlin Sampson", email = "katlinvsampson@gmail.com" }]
license-files = ["LICENSE.md"]
requires-python = ">=3.9"
keywords = ["netmiko", "network", "DevNet", "NetOps"]
dependencies = [
    "netmiko>=3.4.0",
    "pyyaml",
    "textfsm",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.urls]
homepage = "https://github.com/Niltak/nil_lib"
repository = "https://github.com/Niltak/nil_lib"
